# meshview

./: .gitmodules  CMakeLists.txt  README.md  common.hpp.in  example.cpp  mesh.cpp  pybind.cpp  python_example.py  setup.py  texture.cpp  viewer.cpp
include/meshview/: camera.hpp  common.hpp  mesh.hpp  meshview.hpp  meshview_imgui.hpp  shader.hpp  texture.hpp  util.hpp  viewer.hpp
include/meshview/internal/: assert.hpp  shader.hpp  shader_inline.hpp
sample-proj/: CMakeLists.txt
src/: camera.cpp  mesh.cpp  shader.cpp  texture.cpp  util.cpp  viewer.cpp
src/cmake/: meshviewConfig.cmake
